--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,74 @@ blockquote {
     padding: 40px 20px 60px;
 }
 
+.cards-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap:32px;
+}
+
+.card {
+border-radius: 30px;
+
+padding: 20px;
+
+
+}
+
+.card_theme_dark {
+    background-color: #343434;
+}
+
+.card_theme_bright {
+    background-color: #fee42a;
+}
+
+.card__author-photo {
+display: block;
+border-radius: 50px;
+width: 100px;
+height: 100px;
+}
+
+.card__author-name {
+    margin: 8px 0 0;
+    font-weight: 700;
+}
+
+.card__title {
+    margin: 8px auto;
+    font-family: 'EB Garamond';
+    font-size:22px;
+    font-weight: 500;
+    line-height: 1.35;
+}
+
+.card__text {
+    line-height: 1.35;
+}
+
+.card_text-only {
+    color:#131313;
+}
+
 .footer {
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #fee42a;
+}
+
+.footer__links {
+    list-style: none;
+    display: flex;
+    gap:16px
+}
+
+.footer__links a {
+    color:#f5f5f5;
+    font-size: 14px;
+    line-height: 1.25;
+    text-decoration: none;
 }
